# evm-benchmark

./: .gitmodules  CMakeLists.txt  Changelog.md  KnownIssue.md  README.md  Tutorial.md
docker/: ejudge-base.Dockerfile  ejudge-dev.Dockerfile  workenv.Dockerfile
scripts/: LityBuilder.sh  SoldityBuilder.sh
src/: CMakeLists.txt  main.cpp
src/Builder/: Builder.h  CMakeLists.txt
src/Common/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  FileUtils.h  keccak-tiny.h
src/Core/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  Content.h  Warper.cpp  Warper.h
src/Log/: CMakeLists.txt  Color.h
src/RLP/: CMakeLists.txt  RLP.cpp  RLP.h
src/Testcase/: CMakeLists.txt  Testcase.h  TestcaseLoder.cpp  TestcaseLoder.h
testcase/ERC20/: (Sol Builder)ERC20.json  ERC20.json  ERC20.sol  IERC20.sol  SafeMath.sol
testcase/VMTests/vmArithmeticTest/: mulUnderFlow.json
testcase/VMTests/vmEnvironmentalInfo/: calldatacopyUnderFlow.json
testcase/example_binary/: 1.json  1000_times_add.json  2.json  3.json  4.json  5.json  5000000_times_add.json  HelloWorld.json  binary.json  compareOperators.json  error_output.json  error_result_code.json  in.json  input.json  math_binary_OP_with_SHA3.json  math_binary_OP_with_SHA3_and_gas.json  result_code_error.json  simple_contract.sol  simple_contract_A.json  simple_contract_B.json  stackMemorySize.json
testcase/example_emitlog/: event.json  log0.json  log0_emptyMem.json  log3.json  log3_error.json  simple_event.sol  simple_log.sol
testcase/example_solidity/: simple_contract.sol  simple_contract_A.json  simple_contract_B.json
(+120 files in other folders)
